# dynamic-route53-rs

./: .containerignore  Cargo.toml  Containerfile  LICENSE  PKGBUILD  README.md  iam-user.template.yml  sample_config.yml  user-and-notification.template.yml
.github/workflows/: build-container.yml  build-test.yml
helm/dynamic-route53/: Chart.yaml  values.yaml
helm/dynamic-route53/configmap/: config.yaml
helm/dynamic-route53/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml
src/: config.rs  errors.rs  ipaddr.rs  main.rs
systemd/: dynamic-route53.service  dynamic-route53.timer
