[package]
name = "dynamic-route53"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", default-features = false, features = ["client-hyper", "rustls", "credentials-process", "behavior-version-latest"] }
aws-sdk-route53 = "1"
clap = { version = "4.5", features = ["env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
hickory-client = { version = "0.24", default-features = false }
