[package]
name = "dynamic-route53"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "0.57", features = ["sso"] }
aws-sdk-route53 = "0.35"
aws-smithy-types = "0.57"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
reqwest ={ version = "0.11", default-features = false, features = ["rustls-tls", "trust-dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
trust-dns-client = { version = "0.23", default-features = false }
