[package]
name = "dynamic-route53"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", default-features = false, features = ["client-hyper", "credentials-process", "behavior-version-latest"] }
aws-sdk-route53 = { version = "1", default-features = false, features = ["rt-tokio"] }
clap = { version = "4.5", features = ["env"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
